# LocalBinaryPattern

./: .gitignore  CMakeLists.txt  Image.cpp  Image.h  InteractiveWizard.cpp  README.md  TypeDetect.cpp  aarch64-linux-toolchain.cmake  help_text.h  main.cpp  x86_64-linux-toolchain.cmake  x86_64-windows-toolchain.cmake
Binaries/v0.1.0-alpha/: LocalBinaryPattern-Linux-aarch64  LocalBinaryPattern-macOS-Universal
Binaries/v0.1.0-alpha/Linux-x86_64/: LocalBinaryPattern
Binaries/v0.1.1-alpha/: LocalBinaryPattern-Linux-aarch64  LocalBinaryPattern-Linux-x86_64  LocalBinaryPattern-macOS-M1  LocalBinaryPattern-macOS-Universal  LocalBinaryPattern-macOS-x86_64
Binaries/v0.1.2-alpha/: LocalBinaryPattern-Linux-aarch64  LocalBinaryPattern-Linux-x86_64  LocalBinaryPattern-macOS-M1  LocalBinaryPattern-macOS-Universal  LocalBinaryPattern-macOS-x86_64
Binaries/v1.0.0/: LocalBinaryPattern-Linux-aarch64  LocalBinaryPattern-Linux-x86_64  LocalBinaryPattern-macOS-Universal  LocalBinaryPattern-macOS-aarch64  LocalBinaryPattern-macOS-x86_64
Binaries/v1.0.1/: LocalBinaryPattern-Linux-aarch64  LocalBinaryPattern-Linux-x86_64  LocalBinaryPattern-macOS-Universal  LocalBinaryPattern-macOS-aarch64  LocalBinaryPattern-macOS-x86_64
Binaries/v1.0.2/: LocalBinaryPattern-Linux-aarch64  LocalBinaryPattern-Linux-x86_64  LocalBinaryPattern-macOS-Universal  LocalBinaryPattern-macOS-aarch64  LocalBinaryPattern-macOS-x86_64
DOCS/: DOCS.FR.md  DOCS.md
demo_images/: black_white.tga  black_white_90.tga  black_white_check.tga  circle.tga
src/: main.cpp
src/Image/: Image.cpp
src/InteractiveWizard/: InteractiveWizard.cpp  InteractiveWizard.h
src/TypeDetect/: TypeDetect.cpp  TypeDetect.h
